profilewall suggestion watch added

--- a/db/public/index.html
+++ b/db/public/index.html
@@ -24,6 +24,7 @@
             <h1>List of routes</h1>
             <ol type="disc">
                 <li><a href="/players">Players</a></li>
+                <li><a href="/videos">Videos</a></li>
             </ol>
         </div>
     </body>
