--- a/db/public/index.html
+++ b/db/public/index.html
@@ -25,6 +25,7 @@
             <ol type="disc">
                 <li><a href="/players">Players</a></li>
                 <li><a href="/videos">Videos</a></li>
+                <li><a href="/suggestions">Suggestions</a></li>
             </ol>
         </div>
     </body>
